merged DE branch 28_APR_2009_Clinportal_1.2.0 in Category Branch
SVN-Revision: 19469